--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         jcenter()
         google()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
