--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         classpath "com.android.tools.build:gradle:$androidPluginVersion"
         classpath "org.wisepersist:gwt-gradle-plugin:$gwtPluginVersion"
+        classpath 'com.github.tommyettinger:WarpWriter:8e2d2200d7'
     }
 }
 
