--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ squidLibExtraVersion=3.0.0-b9
 squidLibUtilVersion=3.0.0-b9
 regExodusVersion=0.1.9
 utilsVersion=0.13.4
-squidLibVersion=3.0.0-b9
+squidLibVersion=c29a276b20
 androidPluginVersion=2.3.2
 gwtFrameworkVersion=2.8.0
 gwtPluginVersion=1.0.3
