--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,13 @@
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx512m
-org.gradle.configureondemand=true
+org.gradle.configureondemand=false
 joiseVersion=1.0.5
 noise4jVersion=0.1.0
-squidLibExtraVersion=3.0.0-b9
-squidLibUtilVersion=3.0.0-b9
-regExodusVersion=0.1.9
+regExodusVersion=0.1.10
 utilsVersion=0.13.4
-squidLibVersion=c29a276b20
-androidPluginVersion=2.3.2
+squidLibVersion=bee025a36f
+androidPluginVersion=3.1.0
 gwtFrameworkVersion=2.8.0
-gwtPluginVersion=1.0.3
-gdxVersion=1.9.6
-warpWriterVersion=2362e32970
+gwtPluginVersion=1.0.6
+gdxVersion=1.9.8
+warpWriterVersion=8100a93b65
