--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="net.benmclean.warpreader"
     android:versionCode="1"
     android:versionName="1.0" >
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="25" />
+    <uses-sdk /><!-- android:minSdkVersion="8" android:targetSdkVersion="25"-->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
