--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'application'
 
-sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
+//sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
 mainClassName = 'net.benmclean.warpreader.desktop.DesktopLauncher'
 eclipse.project.name = appName + '-desktop'
 sourceCompatibility = 1.7
