--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,12 @@ subprojects {
     version = '0.0.1-SNAPSHOT'
     ext.appName = 'WarpReader'
     repositories {
-        mavenLocal()
         mavenCentral()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url 'https://jitpack.io' }
+        google()
         jcenter()
+        mavenLocal()
     }
 }
 
