--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         google()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url "https://jitpack.io" }
+        maven { url "http://dl.bintray.com/spookygames/oss" }
         jcenter()
     }
     dependencies {
@@ -34,6 +35,7 @@ subprojects {
         mavenCentral()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url 'https://jitpack.io' }
+        maven { url "http://dl.bintray.com/spookygames/oss" }
         google()
         jcenter()
         mavenLocal()
