--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -7,7 +7,7 @@ sourceCompatibility = 1.7
 
 dependencies {
   compile project(':core')
-  compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+  compile "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
   compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
   compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
   compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
