Bizarre issues seem fixed on Android
It couldn't find any assets, despite them being inside the APK. MenuScreen code has moved from the constructor to the show() method because I thought maybe it was loading files in the constructor before it could use them. Android SDK version is now 28 because it's the most recent, and it should work on phones with as low as Android SDK 8.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,7 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 25
+  compileSdkVersion 28
   sourceSets {
     main {
       manifest.srcFile 'AndroidManifest.xml'
@@ -9,7 +9,7 @@ android {
       aidl.srcDirs = ['src/main/java']
       renderscript.srcDirs = ['src/main/java']
       res.srcDirs = ['res']
-      //assets.srcDirs = ['../assets']
+      assets.srcDirs = ['../assets']
       jniLibs.srcDirs = ['libs']
     }
   }
@@ -31,7 +31,7 @@ android {
   defaultConfig {
     applicationId 'net.benmclean.warpreader'
     minSdkVersion 8
-    targetSdkVersion 25
+    targetSdkVersion 28
   }
 }
 
