--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,7 +41,7 @@ dependencies {
   compile project(':core')
   compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
   compile "com.badlogicgames.gdx:gdx-controllers-android:$gdxVersion"
-  compile "net.spookygames.gdx:gdx-nativefilechooser-android:$gdxNativeFileChooserVersion"
+  compile "com.github.BenMcLean.gdx-nativefilechooser:android:$gdxNativeFileChooserVersion"
 
   natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
   natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
