Gradle update allows release APK to build (but not install yet?)

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ android/libs/x86/
 android/gen/
 local.properties
 com_crashlytics_export_strings.xml
+android/release/
+android/debug/
 
 ## GWT:
 war/
